fix(theme): fix algolia search on mobile

--- a/packages/theme/src/client/module/navbar/styles/navbar.scss
+++ b/packages/theme/src/client/module/navbar/styles/navbar.scss
@@ -68,4 +68,9 @@
   .DocSearch {
     margin-left: 0;
   }
+
+  // a workaround for current styles
+  .DocSearch-Container {
+    position: fixed !important;
+  }
 }
